--- a/assets/css/portal.css
+++ b/assets/css/portal.css
@@ -11963,15 +11963,6 @@ button.close:focus {
     cursor: pointer;
 }
 
-.charts-css{
-    --color-1:#00F3A6 !important;
-}
-#line-example-1 {
-    height: 30px;
-    margin: 0 auto;
-    width: 40px;
-}
-
 
 .daterangepicker .calendar-table {
     border: 1px solid #fff;
@@ -12388,7 +12379,7 @@ input[type=date]::-webkit-datetime-edit-year-field {
     padding-left: 1rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
-    color: #C4C4C4;
+    font-size: 1rem;
 }
 
 .app-branding {
@@ -12697,11 +12688,49 @@ input[type=date]::-webkit-datetime-edit-year-field {
     margin-bottom: 25px;
 }
 
+.charts-css{
+    --color-1:#00F3A6 !important;
+}
+#total_sale {
+    height: 30px;
+    margin: 0 auto;
+    width: 40px;
+}
+#total_expense {
+    height: 30px;
+    margin: 0 auto;
+    width: 40px;
+}
+
+#total_revenue {
+    height: 30px;
+    margin: 0 auto;
+    width: 40px;
+}
+
+#sold_products {
+    height: 30px;
+    margin: 0 auto;
+    width: 40px;
+}
+
 .app-card-stat .reputation{
     text-align: left;
 }
 .app-card-stat .reputation p{
     margin: 0;
+}
+
+.bar-bg{
+    background-color: #C4C4C4;
+    border-radius: 50px;
+    margin-top: 0.5rem;
+}
+.bar-color{
+    height: 6px;
+    width: 80%;
+    border-radius: 50px;
+    background: linear-gradient(to right, #152D4C, #00EBB7);
 }
 
 .app-card-stat .stats-figure {
@@ -12732,7 +12761,8 @@ input[type=date]::-webkit-datetime-edit-year-field {
 
 
 .app-card-chart .app-card-body .btn-card{
-    
+    font-size: 1.2rem;
+    padding: 1rem 4rem;
 }
 
 
